Actualizacion de archivos

--- a/index.html
+++ b/index.html
@@ -3,29 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página con Imagen y Video</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="manifest" href="manifest.json">
+  <title>Reseñas</title>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-  <h1>Bienvenido a mi Pagina</h1>
+  <h1>Bienvenido Hoy daremos una reseña de RE4</h1>
 
   <section>
-    <h2>Imagen</h2>
+    <h2>Resident Evil 4</h2>
     <img src="Leon RE4.jpg" alt="Descripción de la imagen">
   </section>
 
-  <section>
-    <h2>Video de YouTube</h2>
-    <iframe src="https://www.youtube.com/embed/u9Dg-g7t2l4?si=gjZ2YwtdWio0QMvb" frameborder="0" allowfullscreen></iframe>
-  </section>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js')
-        .then(() => console.log('Service Worker registrado correctamente'))
-        .catch(error => console.error('Error al registrar Service Worker:', error));
-    }
-  </script>
 
+  <section>
+    <h1>Resumen</h1>
+    <p>Resident Evil 4 es un videojuego de acción y supervivencia desarrollado por Capcom.</p>
+    <p>En el juego, el jugador controla a Leon Kennedy, un agente de la CIA que se encuentra en una zona infectada con zombis.
+       Deberá enfrentarse a los enemigos y resolver los misterios de la ciudad para salvar a la humanidad.
+       </p>
+    <p>
+      Resident Evil 4 fue lanzado en 2005 para la consola PlayStation 2 y en 2006 para la consola Xbox.
+       También se lanzó para la consola Nintendo GameCube en 2006 y para la consola Wii en 2007.
+    </p>
+  </section>
+
+  <section>
+    <h1>Reseña</h1>
+    <p>Resident Evil 4 marcó un antes y un después, no solo en su saga, sino en la industria de los videojuegos. Lanzado originalmente en 2005 para la Nintendo GameCube, el juego fue ampliamente aclamado por la crítica y por los fans, quienes aún lo consideran una joya del survival horror y un referente del género de acción.</p>
+    <p>Jugabilidad revolucionaria
+Una de las opiniones más repetidas sobre la versión original es que su sistema de cámara por encima del hombro cambió para siempre la forma en que se diseñan los juegos de disparos en tercera persona. Los jugadores valoraron mucho la precisión y la tensión que este nuevo enfoque ofrecía, especialmente al combinarlo con un sistema de apuntado manual que exigía puntería y estrategia.</p>
+
+<h1>Un cambio arriesgado, pero efectivo</h1>
+<p>Algunos fans veteranos sintieron que Resident Evil 4 se alejaba de las raíces más lentas y terroríficas de los primeros juegos de la saga. Sin embargo, la mayoría estuvo de acuerdo en que el giro hacia una acción más dinámica, aunque con elementos de tensión constantes, resultó refrescante y muy bien ejecutado. Muchos lo vieron como un equilibrio perfecto entre acción intensa y momentos de suspenso.</p>
+
+<h1>Ambientación inolvidable</h1>
+<p>Otro aspecto que generó opiniones positivas fue su atmósfera. El misterioso pueblo europeo, la oscuridad de los castillos y laboratorios, y la constante sensación de amenaza crearon una ambientación inmersiva y opresiva. La variedad de escenarios y enemigos mantenía el interés durante toda la campaña.</p>
+
+<h1>Leon S. Kennedy como protagonista</h1>
+<p>El regreso de Leon fue muy bien recibido. Su personalidad más madura, combinada con su estilo de combate y frases icónicas, lo convirtieron en uno de los personajes más queridos de la saga. Muchos fans destacaron su evolución desde Resident Evil 2.</p>
+
+<h1>Críticas menores</h1>
+<p>Aunque el juego fue altamente elogiado, algunas críticas comunes incluyeron la inteligencia artificial de Ashley (la compañera que Leon debe proteger), que a veces podía resultar torpe o molesta. También hubo opiniones mixtas sobre los QTE (eventos de pulsación rápida), que aunque innovadores en su momento, podían romper el ritmo.</p>
+
+  </section>
+  <section>
+    <h2>Gameplay RE4</h2>
+    <iframe src="https://www.youtube.com/embed/l2SCwbZIKhQ?si=pLztKOw5DH2iERjl" frameborder="0" allowfullscreen></iframe>
+  </section>
 </body>
 </html>
