--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reseñas</title>
   <link rel="stylesheet" href="estilos.css">
+   <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="icons/icon-192x192.png">
 </head>
 <body>
   <h1>Bienvenido Hoy daremos una reseña de RE4</h1>
